remove console.log and format

--- a/www/css/ionic.app.css
+++ b/www/css/ionic.app.css
@@ -9992,5 +9992,9 @@ p {
   border-color: #ddd;
 }
 
+.infoBar {
+  height: 150px;
+}
+
 [ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
   display: none !important; }
